# rust_ros_rpi

./: Cargo.toml  Cross.toml  README.md
src/: main.rs
src/bus/: event.rs  event_bus.rs
src/hal/: camera.rs  mod.rs  motor.rs  neopixel.rs  servo.rs  ultrasound.rs
src/nodes/: behaviour.rs  camera.rs  ldr.rs  leds.rs  mod.rs  motor.rs  servo.rs  telemetry_bridge.rs  ultrasound.rs  web.rs
static/: robot.css
templates/: index.html
