[package]
name = "ldr_poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rppal = "0.14"
tokio = {version="1", features=["full"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
pca9685-rppal = "0.1.0"
rs_ws281x = "0.5.1"
rand = "0.9.2"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
